# mcs_rust

./: Cargo.toml
src/: main.rs
src/datatypes/: mod.rs  varint_enums.rs
src/packets/: mod.rs  packet.rs
src/packets/server_bound/: handshake.rs  login.rs  play.rs  status.rs
