[package]
name = "minecraft_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["net"] }
serde =  { version = "*", features = ["derive"] }
leb128 = "0.2.5"